# ts/apps/docs/openapi/openapi.json
@@ -1506,13 +1506,21 @@
                     },
                     "is_admin": {
                         "type": "boolean"
+                    },
+                    "pds_sync_status": {
+                        "type": "string"
+                    },
+                    "pds_synced_at": {
+                        "format": "date-time",
+                        "type": "string"
                     }
                 },
                 "required": [
                     "id",
                     "email",
                     "is_admin",
-                    "created_at"
+                    "created_at",
+                    "pds_sync_status"
                 ],
                 "type": "object"
             },
